# SatKiosk3D

./: CMakeLists.txt  README.md
res/models/: earth.ply  moon.ply
res/shaders/: earth_frag.glsl  earth_vert.glsl  moon_frag.glsl  moon_vert.glsl  sun_frag.glsl  sun_vert.glsl  tle_frag.glsl  tle_sat_vert.glsl  tle_vert.glsl
src/: Bin.cc  Bin.h  BinToFormat3D.cc  BinToFormat3D.h  Camera.cc  Camera.h  CompileShader.cc  CompileShader.h  DrawFormat3D.cc  DrawFormat3D.h  EarthTransform.cc  EarthTransform.h  FetchTLE.cc  FetchTLE.h  Format3D.cc  Format3D.h  Format3DToBin.cc  Format3DToBin.h  GPSConvert.cc  GPSConvert.h  GPSTypes.h  Image.cc  Image.h  ImageToTexture.cc  ImageToTexture.h  LinkShaders.cc  LinkShaders.h  LoadBin.cc  LoadBin.h  LoadFormat3D.cc  LoadFormat3D.h  LoadImagePNG.cc  LoadImagePNG.h  LoadTLE.cc  LoadTLE.h  LoadText.cc  LoadText.h  PlyToFormat3D.cc  PlyToFormat3D.h  RenderEarth.cc  (+19 more)
test/: before_RenderEarth.cc  test.cc
